Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -195,11 +195,11 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach Donnie Gardner Sr." class="img-fluid float-left coach-modal-img" />
-        <h5 class="coach-name editable">Donnie Gardner Sr.</h5>
+        <img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" />
+        <h5 class="coach-name editable">New Guy</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-          <p>Assistant Coach Donnie Gardner Sr. is in his first season with the Cavaliers. Gardner has an extensive background working with youth in multiple sports. He coached and mentored youth from ages 5-18 in the Youth Basketball Association from 1986-99, he was an assistant at Beasley Academic Center from 1994-96, and he coached Little League Baseball from 1987-1996 with South Side Little League and Jackie Robinson West. Coach Gardner also served as attendance coordinator at Whitney Young High School from 1996-2001.</p>
+          <p>Assistant Coach </p>
         </div>
       </div>
       <div class="modal-footer">
