Updated 'mens-basketball.html' via CloudCannon

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -195,7 +195,7 @@ slides:
         </button>
       </div>
       <div class="modal-body">
-        <img src="{{page.baseurl}}uploads/dgardnersr.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" />
+        <img src="/uploads/blank-male-avatar-1.jpg" alt="Photo of Assistant Coach" class="img-fluid float-left coach-modal-img editable" />
         <h5 class="coach-name editable">New Guy</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
