Updated 'volleyball.html' via CloudCannon

--- a/volleyball.html
+++ b/volleyball.html
@@ -144,9 +144,9 @@ slides:
       </div>
       <div class="col-md-4">
         <div class="row">
-          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid coach-img modal-link editable"></a></div>
+          <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="uploads/blank_male_avatar.jpg" alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable"></a></div>
           <div class="col-6 float-right">
-            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Alexia Campbell</h5></a>
+            <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">TBD</h5></a>
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
@@ -196,14 +196,10 @@ slides:
       </div>
       <div class="modal-body">
         <img src="{{page.baseurl}}uploads/17-acampbell-asst.jpg" alt="Photo of Assistant Coach Alexia Campbell" class="img-fluid float-left coach-modal-img editable">
-        <h5 class="coach-name editable">Alexia Campbell</h5>
+        <h5 class="coach-name editable">TBD</h5>
         <h6 class="coach-title editable">Assistant Coach</h6>
         <div class="editable">
-          <p>Starting her first year coaching college level volleyball, Assistant Coach Alexia Campbell comes to the Cavaliers with a passion to lead and apply her prior playing experience.</p>
-          <p>Campbell is a three-year varsity veteran from Kankakee High School where she continues to hold multiple records. While on the Kays, Campbell also was a two-time MVP and team leader, serving as  captain for two seasons.</p>
-          <p>Campbell chose to be a coach because of her passion for volleyball. She is able to foster the growth of her players through the numerous opportunities she is fortunate to provide. Her goal is to help lead the Cavaliers to many wins and build a strong foundation of young women.</p>
-          <p>"I will mold a group of individuals to communicate, to be responsible, and to hold themselves accountable," Coach Campbell said. "I developed my coaching philosophy based on what is important to me and what I have learned about myself."</p>
-          <p>Campbell is currently studying medical sonography and working as a nursing assistant. She is the mother of two children.</p>
+          
         </div>
       </div>
       <div class="modal-footer">
