Updated 'about/student-athletes/index.html' via CloudCannon

--- a/about/student-athletes/index.html
+++ b/about/student-athletes/index.html
@@ -4,12 +4,13 @@ baseurl: ../../
 base: about
 title: Student-Athlete Experience
 ---
+
 {% include about-nav.html %}
 <section class="sub-nav-marg">
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}uploads/student-athlete-lab.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/student-athlete-lab.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center" />
       </div>
     </div>
   </div>
@@ -18,21 +19,23 @@ title: Student-Athlete Experience
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">KCC Student-Athlete Experience</h2><br>
+        <h2 class="main-heading editable">
+            <strong>KCC Student-Athlete Experience</strong>
+        </h2><br />
         <div class="editable">
-          <p>At KCC, fostering student-athlete success in the classroom is paramount. The athletic department is committed to doing all it can to ensure this success.</p>
-          <p>“We expect our student-athletes to work as hard in the classroom as they do in their respective sports,” said Todd Post, KCC athletic director. “We want to give them as many opportunities as possible to achieve because it can be tricky balancing it all.”</p>
-          <p>One example of this commitment is the Athletics Study Lab, a new computer lab created specifically for KCC student-athletes. They have exclusive access to this lab to fulfill their weekly mandatory computer lab time requirements.</p>
-          <p>“To have access to our own space allows us to keep a closer eye on their academic progress while giving teams an opportunity to bond outside the field or court,” said Bryce Shafer, academic success coordinator and assistant baseball coach.</p>
-          <p>In the lab, student-athletes can access software such as Microsoft Office to complete their assignments. Red Canyon, a software system that keeps track of student lab visits, was installed on all computers so student-athlete lab time can be easily monitored. Student-athletes are required to spend a mandatory of four hours per week of study table time in the lab.</p>
-          <p>Baseball Head Coach Todd Post firmly believes the required student table environment breeds confidence and results for athletes both in the classroom and on the field.</p>
-          <p>“We (athletics coaches, administration, and faculty) are a united group; we all want every student to do well in the classroom so their efforts culminate in a degree,” said Post.</p>
-          <p>Academic monitoring ensures student-athletes are advancing toward a degree. By monitoring class participation through progress reports, study table time in the computer lab, and other early alert checks, students have proven successful in the classroom, keeping them eligible to play.</p>
-          <p>“We could not have a successful academic mentoring program without the support of the faculty,” said Shafer. “The mission of the athletics department is in line with the school’s mission of focusing on academics first.”</p>
-          <p>In addition to the computer lab and study table time, students also have access to free tutoring and study skills workshops--services that are available free of charge to all currently enrolled KCC students.</p>
-          <p>Post stressed that the culture of achievement for student-athletes starts at the top with KCC President John Avendano, Ph.D.</p>
-          <p>“As much as Dr. Avendano enjoys athletics and loves to win, he wants students to win in the classroom first,” said Post. “Classroom success results in a stronger program, a stronger athlete and individual, which results in a stronger community.”</p>
-          <p>Funding for the computer lab came from the 2013 and 2014 Cavaliers Classic Golf Outing, an event co-sponsored with the KCC Foundation. To learn more about how KCC athletics are supported, visit the Donate page.</p>
+            <p>At KCC, fostering student-athlete success in the classroom is paramount. The athletic department is committed to doing all it can to ensure this success.</p>
+            <p>&ldquo;We expect our student-athletes to work as hard in the classroom as they do in their respective sports,&rdquo; said Todd Post, KCC athletic director. &ldquo;We want to give them as many opportunities as possible to achieve because it can be tricky balancing it all.&rdquo;</p>
+            <p>One example of this commitment is the Athletics Study Lab, a new computer lab created specifically for KCC student-athletes. They have exclusive access to this lab to fulfill their weekly mandatory computer lab time requirements.</p>
+            <p>&ldquo;To have access to our own space allows us to keep a closer eye on their academic progress while giving teams an opportunity to bond outside the field or court,&rdquo; said Bryce Shafer, academic success coordinator and assistant baseball coach.</p>
+            <p>In the lab, student-athletes can access software such as Microsoft Office to complete their assignments. Red Canyon, a software system that keeps track of student lab visits, was installed on all computers so student-athlete lab time can be easily monitored. Student-athletes are required to spend a mandatory of four hours per week of study table time in the lab.</p>
+            <p>Baseball Head Coach Todd Post firmly believes the required student table environment breeds confidence and results for athletes both in the classroom and on the field.</p>
+            <p>&ldquo;We (athletics coaches, administration, and faculty) are a united group; we all want every student to do well in the classroom so their efforts culminate in a degree,&rdquo; said Post.</p>
+            <p>Academic monitoring ensures student-athletes are advancing toward a degree. By monitoring class participation through progress reports, study table time in the computer lab, and other early alert checks, students have proven successful in the classroom, keeping them eligible to play.</p>
+            <p>&ldquo;We could not have a successful academic mentoring program without the support of the faculty,&rdquo; said Shafer. &ldquo;The mission of the athletics department is in line with the school&rsquo;s mission of focusing on academics first.&rdquo;</p>
+            <p>In addition to the computer lab and study table time, students also have access to free tutoring and study skills workshops--services that are available free of charge to all currently enrolled KCC students.</p>
+            <p>Post stressed that the culture of achievement for student-athletes starts at the top with KCC President John Avendano, Ph.D.</p>
+            <p>&ldquo;As much as Dr. Avendano enjoys athletics and loves to win, he wants students to win in the classroom first,&rdquo; said Post. &ldquo;Classroom success results in a stronger program, a stronger athlete and individual, which results in a stronger community.&rdquo;</p>
+            <p>Funding for the computer lab came from the 2013 and 2014 Cavaliers Classic Golf Outing, an event co-sponsored with the KCC Foundation. To learn more about how KCC athletics are supported, visit the Donate page.</p>
         </div>
       </div>
     </div>
