--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -9,7 +9,7 @@ title: Fitness Center
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-      <h1 class="page-heading">Fitness Center</h1>
+      <h1 class="blue-heading">Fitness Center</h1>
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
