--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -9,7 +9,7 @@ title: Fitness Center
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-      <h1 class="blue-heading">Fitness Center</h1>
+      <h1 class="page-heading">Fitness Center</h1>
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
@@ -41,7 +41,7 @@ title: Fitness Center
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Fitness Center</h2><br>
+        <h2 class="blue-heading editable">Fitness Center</h2><br>
         <div class="editable">
           <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
           <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC’s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
