--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -4,6 +4,7 @@ baseurl: ../../
 base: facilities
 title: Fitness Center
 ---
+
 <!-- Facilities-specific sub-nav -->
 <div class="container-fluid sub-nav">
   <div class="row filler">&#160;</div>
@@ -31,7 +32,7 @@ title: Fitness Center
   <div class="container hero-container">
     <div class="row hero-row">
       <div class="col-md-12">
-        <img src="{{page.baseurl}}uploads/D41_3957fchome.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center">
+        <img src="{{page.baseurl}}uploads/D41_3957fchome.jpg" class="img-fluid hero editable" alt="Photo of the George S. Ryan Activities Center" />
       </div>
     </div>
   </div>
@@ -41,10 +42,127 @@ title: Fitness Center
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="blue-heading editable">Fitness Center</h2><br>
+        <h2 class="blue-heading editable">Fitness Center</h2><br />
         <div class="editable">
-          <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
-          <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC’s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
+            <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
+            <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
+            <p>&nbsp;</p>
+            <p>Become a Member</p>
+            <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
+            <p>Membership options</p>
+            <p>KCC offers the following membership packages to non-student members of the community.</p>
+            <p>Package</p>
+            <p>Monthly</p>
+            <p>Annual</p>
+            <p>Individual &nbsp;(16 - 59 yrs.)</p>
+            <p>$25</p>
+            <p>$275</p>
+            <p>Couple</p>
+            <p>$45</p>
+            <p>$495</p>
+            <p>Family (up to 2 parents and 3 children,</p>
+            <p>16 yrs. and older)</p>
+            <p>$80</p>
+            <p>$880</p>
+            <p>Additional dependent</p>
+            <p>$15</p>
+            <p>$165</p>
+            <p>Senior (60 yrs. and older)</p>
+            <p>$9</p>
+            <p>$99</p>
+            <p>U.S. military veterans</p>
+            <p>$9</p>
+            <p>$99</p>
+            <p>KCC graduates</p>
+            <p>$20</p>
+            <p>$220</p>
+            <p>​KCC staff</p>
+            <p>Free​</p>
+            <p>​</p>
+            <p>Daily Pass</p>
+            <p>$5/day</p>
+            <p>Student options</p>
+            <p>KCC students can choose to:</p>
+            <p>sign up as a member</p>
+            <p>enroll in the fitness center course and earn college credit</p>
+            <p>Option​​</p>
+            <p>Spring or Fall</p>
+            <p>Summer</p>
+            <p>KCC students (as member)</p>
+            <p>$80</p>
+            <p>$40</p>
+            <p>KCC students (as course enrollee)</p>
+            <p>current tuition rate</p>
+            <p>for 1 credit hour</p>
+            <p>+ $20 fee</p>
+            <p>current tuition rate</p>
+            <p>for 1 credit hour</p>
+            <p>+ $20 fee</p>
+            <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
+            <p>&nbsp;</p>
+            <p>Personal Trainers and Staff</p>
+            <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
+            <p>Rates</p>
+            <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
+            <p>​No. of Persons</p>
+            <p>​1 session</p>
+            <p>​5 sessions</p>
+            <p>​10 sessions</p>
+            <p>​1</p>
+            <p>​$30</p>
+            <p>$135​</p>
+            <p>$260​</p>
+            <p>​2</p>
+            <p>​$25/person</p>
+            <p>$110/person​</p>
+            <p>​$210/person</p>
+            <p>​3</p>
+            <p>​$20/person</p>
+            <p>​$85/person</p>
+            <p>​$160/person</p>
+            <p>[READ MORE]</p>
+            <p>Why personal training?</p>
+            <p>Using a personal trainer will help you maximize your time and effort at the gym, giving you tremendous value.</p>
+            <p>Reach your fitness goals faster</p>
+            <p>Achieve better results</p>
+            <p>Keep your workouts fresh and motivating</p>
+            <p>Save time with a thorough, pre-planned workout</p>
+            <p>Fitness assessment</p>
+            <p>A fitness assessment evaluates physical fitness components such as height, weight, body fat composition, resting heart rate, balance, muscle strength and endurance. Cost is $35.</p>
+            <p>Questions/Appointments</p>
+            <p>Contact Yvonne Mills, personal trainer manager</p>
+            <p>Staff</p>
+            <p>Yvonne Mills &nbsp;</p>
+            <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
+            <p>Yvonne earned a bachelor&rsquo;s degree in physical education from Olivet Nazarene University.</p>
+            <p>815-802-8610</p>
+            <p>ymills@kcc.edu</p>
+            <p>Fitness specialists</p>
+            <p>​</p>
+            <p>​</p>
+            <p>​Candice Brackett</p>
+            <p>Fitness specialist, athletic trainer</p>
+            <p>815-802-8610</p>
+            <p>cbrackett@kcc.edu</p>
+            <p>Francine Castongia</p>
+            <p>Fitness specialist</p>
+            <p>815-802-8610</p>
+            <p>fcastongia@kcc.edu</p>
+            <p>&nbsp;</p>
+            <p>Testimonials</p>
+            <p>Get inspired!</p>
+            <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
+            <p>Lamanda Garcia</p>
+            <p>&ldquo;Yvonne was an amazing coach. She pushed me each class.&rdquo;</p>
+            <p>Donna Schmidt</p>
+            <p>&ldquo;I have lost inches, gained muscle mass and become much stronger with LESS aches and pain.&rdquo;</p>
+            <p>Carolyn Jacobson</p>
+            <p>&ldquo;...We know that having a safe and effective work-out propels you into a fuller and more rewarding life. And this is exactly what using KCC&rsquo;s Fitness Center and working with Yvonne have done for me. &rdquo;</p>
+            <p>John Kessler</p>
+            <p>&ldquo;After three months, I could tell that things were improving. After six months I feel stronger, my balance has improved and I've lost some weight.&rdquo;</p>
+            <p>Mike Wickliff</p>
+            <p>&ldquo;I recommend any athlete or person, to sign up for training sessions with Ms. Yvonne. I guarantee you will get better in the area you are trying to improve.&rdquo;</p>
+            <p>&nbsp;</p>
         </div>
       </div>
     </div>
