--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -47,7 +47,7 @@ title: Fitness Center
             <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
             <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <p>Become a Member</p>
+              <h2 class="blue-heading editable">Become a Member</h2><br />
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
             <p>Membership options</p>
             <p>KCC offers the following membership packages to non-student members of the community.</p>
@@ -100,7 +100,7 @@ title: Fitness Center
             <p>+ $20 fee</p>
             <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
             <p>&nbsp;</p>
-            <p>Personal Trainers and Staff</p>
+            <h2 class="blue-heading editable">Personal Trainser and Staff</h2><br />
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
             <p>Rates</p>
             <p>Training sessions are one hour. You will have an initial consultation to discuss specific fitness goals. Up to three people can participate in a session. Rates are:</p>
@@ -149,7 +149,7 @@ title: Fitness Center
             <p>815-802-8610</p>
             <p>fcastongia@kcc.edu</p>
             <p>&nbsp;</p>
-            <p>Testimonials</p>
+         <h2 class="blue-heading editable">Testimonials</h2><br />
             <p>Get inspired!</p>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
             <p>Lamanda Garcia</p>
