Updated 'facilities/fitness-center/index.html' via CloudCannon

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -74,21 +74,20 @@ title: Fitness Center
             <p>A fitness assessment evaluates physical fitness components such as height, weight, body fat composition, resting heart rate, balance, muscle strength and endurance. Cost is $35.</p>
             <p>Questions/Appointments</p>
             <p>Contact Yvonne Mills, personal trainer manager</p>
-            <p>&nbsp;</p>
             <p><strong>Staff</strong></p>
-            <p>Yvonne Mills &nbsp;</p>
+            <p><strong>Yvonne Mills </strong>&nbsp;</p>
             <p>An ACE certified personal trainer and sports conditioning specialist, Yvonne has been making fitness fun for more than 20 years. Yvonne's experience includes: strength training, teaching aerobics, teaching kickboxing, and working as a personal and group trainer. She holds a black belt in Tang Soo Do and has competed in powerlifting and bodybuilding competitions.</p>
             <p>Yvonne earned a bachelor&rsquo;s degree in physical education from Olivet Nazarene University.</p>
             <p>815-802-8610</p>
             <p>ymills@kcc.edu</p>
             <p>Fitness specialists</p>
             <p>​</p>
-            <p>​Candice Brackett</p>
+            <p><strong>​Candice Brackett</strong></p>
             <p>Fitness specialist, athletic trainer</p>
             <p>815-802-8610</p>
             <p>cbrackett@kcc.edu</p>
             <p>&nbsp;</p>
-            <p>Francine Castongia</p>
+            <p><strong>Francine Castongia</strong></p>
             <p>Fitness specialist</p>
             <p>815-802-8610</p>
             <p>fcastongia@kcc.edu</p>
