Updated 'support/cash-bash/index.html' via CloudCannon

--- a/support/cash-bash/index.html
+++ b/support/cash-bash/index.html
@@ -29,7 +29,7 @@ title: Cash Bash
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="main-heading editable">Cash Bash</h2><br>
+        <h2 class="blue-heading editable">Cash Bash</h2><br>
         <div class="editable">
           <p>Cavalier Cash Bash will be Saturday, Feb. 16, from 6:30 - 11 p.m., at the Quality Inn, 800 N. Kinzie Ave., in Bradley.</p>
           <p>There will be 24 prize winners including a $5,000 grand prize. There will also be raffle baskets.</p>
