--- a/womens-basketball.html
+++ b/womens-basketball.html
@@ -68,6 +68,11 @@ slides:
 
 <!--  Content  -->
 <section class="container content-marg">
+  {% for alert in site.alerts %}
+    {% if alert.display_alert == true %}
+      {% include athletics-alert.html %}
+    {% endif %}
+  {% endfor %}
     <div class="row schedule-row">
       <div class="col-md-12">
         <h2 class="main-heading"><img src="{{page.baseurl}}assets/img/calendar.svg" class="icon-middle" alt="Calendar icon">&#160;Upcoming Games <a href="{{ page.baseurl }}womens-basketball/schedule" class="btn btn-primary schedule__button-margin">View Full Schedule</a></h2>
@@ -142,7 +147,7 @@ slides:
           </div>
         </div>
       </div>
-      
+
       <div class="col-md-4">
         <div class="row">
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach3"><img src="{{page.baseurl}}uploads/14-cmeister-asst.jpg" alt="Photo of Assistant Coach Casey Meister" class="img-fluid coach-img modal-link editable"></a></div>
@@ -192,7 +197,7 @@ slides:
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-  
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
