Fix typo in sport-facilities sub-nav menu

--- a/facilities/sports-facilities/index.html
+++ b/facilities/sports-facilities/index.html
@@ -20,10 +20,10 @@ title: Sports Facilities
           <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#baseball-field" class="nav-link sub-nav-link">Baseball Field</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#softball-field" class="nav-link sub-nav-link">Softball Fied</a>
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#softball-field" class="nav-link sub-nav-link">Softball Field</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#soccer-field" class="nav-link sub-nav-link">Soccer Fied</a>
+          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities#soccer-field" class="nav-link sub-nav-link">Soccer Field</a>
         </li>
       </ul>
     </div>
