Fix link text typo for "Soccer Field"

--- a/facilities.html
+++ b/facilities.html
@@ -53,7 +53,7 @@ base: facilities
         <a href="{{site.baseurl}}/facilities/sports-facilities#gym" class="blue-link">George S. Ryan Gymnasium</a><br>
         <a href="{{site.baseurl}}/facilities/sports-facilities#baseball-field" class="blue-link">Baseball Field</a><br>
         <a href="{{site.baseurl}}/facilities/sports-facilities#softball-field" class="blue-link">Softball Field</a><br>
-        <a href="{{site.baseurl}}/facilities/sports-facilities#soccer-field" class="blue-link">Softball Field</a><br>
+        <a href="{{site.baseurl}}/facilities/sports-facilities#soccer-field" class="blue-link">Soccer Field</a><br>
       </div>
     </div>
     <div class="row">
