Add .link__offset class to items with jump link id's ...
Create jump link targets in fitness center page

--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -10,7 +10,7 @@ title: Fitness Center
   <div class="row filler">&#160;</div>
   <div class="row sub-nav-row mx-auto">
     <div class="col-md-6 text-center">
-    
+
     </div>
     <div class="col-md-6">
       <ul class="nav justify-content-center">
@@ -42,12 +42,12 @@ title: Fitness Center
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-    
+
         <div class="editable">
             <p>The KCC Fitness Center offers total body fitness to KCC students as well as members of the community. The 3,500 square-foot facility features state-of-the-art equipment from Life Fitness, the No. 1 brand of fitness equipment in health clubs worldwide, offering a full range of training options.</p>
             <p>Monthly and annual membership packages are available for individuals, families and couples. KCC students can enroll for college credit. KCC&rsquo;s athletes also use the center as part of their training. For more information, phone 815-802-8610.</p>
             <p>&nbsp;</p>
-            <h2 class="blue-heading">Become a Member</h2>
+            <h2 id="membership" class="blue-heading link__offset">Become a Member</h2>
             <p>Sign up at KCC's Accounting Office (second floor of the college) and at the Fitness Center, located in the Ice Valley Centre at 1601 River Road, Kankakee.</p>
             <p>&nbsp;</p>
             <p><strong>Membership Options</strong></p>
@@ -55,7 +55,7 @@ title: Fitness Center
             <p>ADD MEMBERSHIP TABLE</p>
             <p>Review details about enrolling in the Fitness Center for College Credit to decide which option fits your needs best.</p>
             <p>&nbsp;</p>
-            <h2 class="blue-heading">Personal Trainers and Staff</h2>
+            <h2 id="personal-trainers" class="blue-heading link__offset">Personal Trainers and Staff</h2>
             <p>Our personal trainers can help you reach your fitness goals. In addition to being certified professionals and/or having the appropriate degrees, our trainers stay current with the latest fitness trends and training techniques.</p>
             <p>&nbsp;</p>
             <p>Rates</p>
@@ -92,7 +92,7 @@ title: Fitness Center
             <p>815-802-8610</p>
             <p>fcastongia@kcc.edu</p>
             <p>&nbsp;</p>
-            <h2 class="blue-heading">Testimonials</h2>
+            <h2 id="testimonials" class="blue-heading link__offset">Testimonials</h2>
             <p>Get inspired!</p>
             <p>&nbsp;</p>
             <p>Read how our members reached their fitness goals at KCC's comfortable and well-equipped fitness center with the help of our knowledgeable, supportive personal trainers. &nbsp;</p>
