--- a/facilities/fitness-center/index.html
+++ b/facilities/fitness-center/index.html
@@ -15,13 +15,13 @@ title: Fitness Center
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#membership" class="nav-link sub-nav-link">Membership</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center#membership" class="nav-link sub-nav-link">Membership</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center#personal-trainers" class="nav-link sub-nav-link">Personal Trainers</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center#testimonials" class="nav-link sub-nav-link">Testimonials</a>
         </li>
       </ul>
     </div>
