Fix all sub-nav links containing double // ...
sub-navs had a "/" between {page.baseurl}/{{...
With baseurl being ../ slashes were being doubled

--- a/facilities.html
+++ b/facilities.html
@@ -15,10 +15,10 @@ base: facilities
     <div class="col-md-6">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/sports-facilities" class="nav-link sub-nav-link">Sports Facilities</a>
+          <a href="{{page.baseurl}}{{page.base}}/sports-facilities" class="nav-link sub-nav-link">Sports Facilities</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/fitness-center" class="nav-link sub-nav-link">Fitness Center</a>
+          <a href="{{page.baseurl}}{{page.base}}/fitness-center" class="nav-link sub-nav-link">Fitness Center</a>
         </li>
       </ul>
     </div>
