--- a/support.html
+++ b/support.html
@@ -15,10 +15,10 @@ title: Support Athletics
     <div class="col-md-8">
       <ul class="nav justify-content-center">
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/cash-bash" class="nav-link sub-nav-link">Cash Bash</a>
+          <a href="{{page.baseurl}}{{page.base}}/cash-bash" class="nav-link sub-nav-link">Cash Bash</a>
         </li>
         <li class="nav-item">
-          <a href="{{page.baseurl}}/{{page.base}}/cavalier-club" class="nav-link sub-nav-link">Cavalier Club</a>
+          <a href="{{page.baseurl}}{{page.base}}/cavalier-club" class="nav-link sub-nav-link">Cavalier Club</a>
         </li>
       </ul>
     </div>
