Add Coaches jump-links. Comment coaches html for how to ...
add addtional coaches

--- a/mens-basketball.html
+++ b/mens-basketball.html
@@ -135,33 +135,55 @@ slides:
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/basketball.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
+      <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/basketball.svg" class="icon-middle" alt="" />&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img alt="Photo of Alex Thorson" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" title="Photo of Alex Thorson" width="300" height="400" /></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Alex Thorson</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
-            <p class="editable">815&#8209;802&#8209;8609<br />
-            athorson@kcc.edu</p>
+            <p class="editable">
+              815&#8209;802&#8209;8609<br />
+              athorson@kcc.edu
+            </p>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach1">View Bio</a>
           </div>
-
+        </div>
+      </div>
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
+      <div class="col-md-4">
+        <!-- Coach 2 row -->
+        <div class="row">
+          <!-- Coach 2 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img alt="Photo of Assistant Coach" class="img-fluid coach-img modal-link editable" src="/uploads/blank-male-avatar-1.jpg" title="Assistant Coach" width="300" height="400" /></a></div>
-
-         <div class="col-6 float-right">
+          <!-- Coach 2 right info div (inner-right column) -->
+          <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Assistant</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
             <a data-toggle="modal" class="btn btn-primary" href="#modalCoach2">View Bio</a>
           </div>
-
         </div>
       </div>
-      <div class="col-md-4"></div>
-      <div class="col-md-4"></div>
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
+      <div class="col-md-4">
+      <!-- Coach 3 row would go here
+      to add new coach
+      Copy-and-paste entire contents of a Coach row here and replace info w/ appropriate content ====================================================================================== -->
+      </div>
     </div>
+    <!-- To add an additional row of Coaches
+    copy-and-paste entire contents of "Coaches containing row" here and replace info w/ appropriate content
+    ===================================================================================== -->
   </div>
   <!-- Coach Modals -->
 <div class="modal fade" id="modalCoach1" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
