--- a/baseball.html
+++ b/baseball.html
@@ -134,12 +134,18 @@ slides:
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball" />&#160;&#160;Coaches</h4>
+      <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="Icon of a baseball" />&#160;&#160;Coaches</h4>
     </div>
+    <!-- Coaches containing row -->
     <div class="row">
+      <!-- Coach 1 -->
+      <!-- Coach 1 outer column -->
       <div class="col-md-4">
+        <!-- Coach 1 row -->
         <div class="row">
+          <!-- Coach 1 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach1"><img src="../uploads/todd-post.jpg" alt="Photo of Head Coach Todd Post" class="img-fluid coach-img modal-link editable" title="Photo of Head Coach Todd Post" /></a></div>
+          <!-- Coach 1 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach1" class="modal-link"><h5 class="coach-name editable">Todd Post</h5>
             <h6 class="coach-title editable">Head Coach</h6></a>
@@ -151,9 +157,14 @@ slides:
           </div>
         </div>
       </div>
+      <!-- Coach 2 -->
+      <!-- Coach 2 outer column -->
       <div class="col-md-4">
+        <!-- Coach 2 row -->
         <div class="row">
+          <!-- Coach 2 left image div (inner-left column) -->
           <div class="col-6 float-left"><a data-toggle="modal" href="#modalCoach2"><img src="../uploads/bryce-shafer.jpg" alt="Photo of Assistant Bryce Shafer" class="img-fluid coach-img modal-link editable" title="Photo of Assistant Bryce Shafer" /></a></div>
+          <!-- Coach 2 right info div (inner-right column) -->
           <div class="col-6 float-right">
             <a data-toggle="modal" href="#modalCoach2" class="modal-link"><h5 class="coach-name editable">Bryce Shafer</h5>
             <h6 class="coach-title editable">Assistant Coach</h6></a>
@@ -165,7 +176,13 @@ slides:
           </div>
         </div>
       </div>
-      <div class="col-md-4"></div>
+      <!-- Coach 3 -->
+      <!-- Coach 3 outer column -->
+      <div class="col-md-4">
+        <!-- Coach 3 row would go here
+        to add new coach
+        Copy-and-paste entire contents of a Coach row here and replace info w/ appropriate content ====================================================================================== -->
+      </div>
     </div>
   </div>
   <!-- Coach Modals -->
