Create Coaches jump-link targets & add link__offset class

--- a/softball.html
+++ b/softball.html
@@ -132,7 +132,7 @@ slides:
 <section class="coach-section">
   <div class="container">
     <div class="row text-left">
-      <h4 class="coaches-heading"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
+      <h4 id="coaches" class="coaches-heading link__offset"><img src="{{page.baseurl}}assets/img/baseball.svg" class="icon-middle" alt="">&#160;&#160;Coaches</h4>
     </div>
     <div class="row">
       <div class="col-md-4">
